feat(be/places): gimme endpoint implemented
