# trip/service.go
@@ -4,15 +4,19 @@ import (
 	"github.com/gelidus/web-krokomotiva/core"
 	google_protobuf "github.com/golang/protobuf/ptypes/empty"
 	"golang.org/x/net/context"
+	"googlemaps.github.io/maps"
 )
 
 // Trip represents an implementation of the service interface
 type Service struct {
+	MapsClient *maps.Client
 }
 
 // NewTrip creates a new service object
-func NewService() *Service {
-	return &Service{}
+func NewService(mapsClient *maps.Client) *Service {
+	return &Service{
+		MapsClient: mapsClient,
+	}
 }
 
 func (s *Service) GetVersion(ctx context.Context, in *google_protobuf.Empty) (*Version, error) {
@@ -25,4 +29,41 @@ func (s *Service) Check(ctx context.Context, in *core.HealthCheckRequest) (*core
 	return &core.HealthCheckResponse{
 		Status: core.HealthCheckResponse_SERVING,
 	}, nil
+}
+
+func (s *Service) GimmePlaces(ctx context.Context, in *PlaceRequest) (*Places, error) {
+	resp, err := s.MapsClient.NearbySearch(context.Background(),
+		&maps.NearbySearchRequest{
+			Type:      maps.PlaceType(in.PlaceType),
+			Radius:    uint(in.Radius),
+			PageToken: in.Token,
+			Location: &maps.LatLng{
+				Lat: in.Lat,
+				Lng: in.Lng,
+			},
+			MaxPrice: maps.PriceLevel(in.PriceMax),
+			MinPrice: maps.PriceLevel(in.PriceMin),
+		},
+	)
+
+	if err != nil {
+		return nil, err
+	}
+
+	places := &Places{
+		NextToken: resp.NextPageToken,
+		Places:    []*Place{},
+	}
+
+	for _, p := range resp.Results {
+		places.Places = append(places.Places, &Place{
+			IconURL:    p.Icon,
+			Name:       p.Name,
+			PlaceID:    p.PlaceID,
+			PriceLevel: int32(p.PriceLevel),
+			Rating:     p.Rating,
+		})
+	}
+
+	return &Places{}, nil
 }
